wal-macros/tests/rsx_macro_tests/fragments/fragment_fail.stderr
error: This opening fragment does not have a coressponding closing fragment. (hint: try adding `</>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:4:13
  |
4 |     rsx! { <> };
  |             ^^

error: This opening fragment does not have a coressponding closing fragment. (hint: try adding `</>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:5:15
  |
5 |     rsx! { <><> };
  |               ^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:6:20
  |
6 |     rsx! { <><div></> };
  |                    ^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<div>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:7:15
  |
7 |     rsx! { <></div></> };
  |               ^^^^^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:8:13
  |
8 |     rsx! { </> };
  |             ^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<key>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:9:24
  |
9 |     rsx! { <key="key"></key> };
  |                        ^^^^^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:10:18
   |
10 |     rsx! { <key></> };
   |                  ^^^

error: Expected a literal or an expression block
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:11:18
   |
11 |     rsx! { <key=></> };
   |                  ^

error: Fragment supports only a single `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:12:25
   |
12 |     rsx! { <key="key1" key="key2"></> };
   |                         ^^^

error: Fragment supports only the `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:13:14
   |
13 |     rsx! { <other_attr="attr value"></> };
   |              ^^^^^^^^^^

error: Fragment supports only a single `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:14:24
   |
14 |     rsx! { <key="key" other_attr="attr value"></> };
   |                        ^^^^^^^^^^

error: Fragment supports only the `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:15:14
   |
15 |     rsx! { <other_attr="attr value" key="key"></> };
   |              ^^^^^^^^^^

error: Fragment supports only the `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:16:14
   |
16 |     rsx! { <other_attr1="attr value" other_attr2="attr val"></> };
   |              ^^^^^^^^^^^
